--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,15 +13,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set lowercase repo owner
+        run: echo "OWNER_LOWER=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
       - name: Login to GitHub Container Registry
         run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Build & push backend image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/notes-backend:${{ github.ref_name }} ./backend
-          docker push ghcr.io/${{ github.repository_owner }}/notes-backend:${{ github.ref_name }}
+          docker build -t ghcr.io/$OWNER_LOWER/notes-backend:${{ github.ref_name }} ./backend
+          docker push ghcr.io/$OWNER_LOWER/notes-backend:${{ github.ref_name }}
 
       - name: Build & push frontend image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/notes-frontend:${{ github.ref_name }} ./frontend
-          docker push ghcr.io/${{ github.repository_owner }}/notes-frontend:${{ github.ref_name }}
+          docker build -t ghcr.io/$OWNER_LOWER/notes-frontend:${{ github.ref_name }} ./frontend
+          docker push ghcr.io/$OWNER_LOWER/notes-frontend:${{ github.ref_name }}
