--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,25 +1,33 @@
-name: CI - Build Docker Images
+name: CD - Build & Push Docker Images
 
 on:
   push:
-    branches:
-      - develop
-      - main
-  pull_request:
+    tags:
+      - "v*"
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      # 🔑 Convert repo owner to lowercase
+      - name: Set lowercase repo owner
+        run: |
+          echo "OWNER_LOWER=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
-      - name: Build backend image
-        run: docker build -t notes-backend ./backend
+      - name: Login to GitHub Container Registry
+        run: |
+          echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      - name: Build frontend image
-        run: docker build -t notes-frontend ./frontend
+      - name: Build & push backend image
+        run: |
+          docker build -t ghcr.io/$OWNER_LOWER/notes-backend:${{ github.ref_name }} ./backend
+          docker push ghcr.io/$OWNER_LOWER/notes-backend:${{ github.ref_name }}
+
+      - name: Build & push frontend image
+        run: |
+          docker build -t ghcr.io/$OWNER_LOWER/notes-frontend:${{ github.ref_name }} ./frontend
+          docker push ghcr.io/$OWNER_LOWER/notes-frontend:${{ github.ref_name }}
