--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,25 @@
-name: CD - Build & Push Docker Images
+name: CI - Build Docker Images
 
 on:
   push:
-    tags:
-      - "v*"
+    branches:
+      - develop
+      - main
+  pull_request:
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 🔑 Convert repo owner to lowercase
-      - name: Set lowercase repo owner
-        run: |
-          echo "OWNER_LOWER=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Login to GitHub Container Registry
-        run: |
-          echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      - name: Build backend image
+        run: docker build -t notes-backend ./backend
 
-      - name: Build & push backend image
-        run: |
-          docker build -t ghcr.io/$OWNER_LOWER/notes-backend:${{ github.ref_name }} ./backend
-          docker push ghcr.io/$OWNER_LOWER/notes-backend:${{ github.ref_name }}
-
-      - name: Build & push frontend image
-        run: |
-          docker build -t ghcr.io/$OWNER_LOWER/notes-frontend:${{ github.ref_name }} ./frontend
-          docker push ghcr.io/$OWNER_LOWER/notes-frontend:${{ github.ref_name }}
+      - name: Build frontend image
+        run: docker build -t notes-frontend ./frontend
