--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,17 +2,20 @@ server {
   listen 80;
   server_name localhost;
 
-  # API proxy (PRESERVE /api)
-  location /api/ {
+  # 🔥 API: forward ALL methods to backend
+  location ^~ /api/ {
     proxy_pass http://backend:5000/api/;
     proxy_http_version 1.1;
 
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
   }
 
-  # React SPA
+  # 🔥 React SPA routing
   location / {
     root /usr/share/nginx/html;
     index index.html;
