--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,5 +29,7 @@ jobs:
 
       - name: Build & push frontend image
         run: |
-          docker build -t ghcr.io/$OWNER_LOWER/notes-frontend:${{ github.ref_name }} ./frontend
+           docker build \
+          --build-arg VITE_API_URL=/api \
+          -t ghcr.io/$OWNER_LOWER/notes-frontend:${{ github.ref_name }} ./frontend
           docker push ghcr.io/$OWNER_LOWER/notes-frontend:${{ github.ref_name }}
